_sass/test.scss
$color_1: white;
$color_2: #fff;
$color_3: inherit;
$color_4: #3b9cba;
$color_5: #808080;
$color_6: #000;
$font-family_1: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
$font-family_2: "Brush Script MT";
$font-family_3: -apple-system,BlinkMacSystemFont,"Roboto","Segoe UI","Helvetica Neue","Lucida Grande",Arial,sans-serif;
$background-color_1: #fff;
$background-color_2: transparent;
$background-color_3: #000;


footer {
	background-image: url('../images/background.gif');
    background-size: cover;
}

/* Prevent image from floating beside headers*/
h1, h2, h3, h4, h5, h6 {
	clear: both;
}

  

/* Change Linky Behaviour */
.masthead {
	position: fixed;
	top: 0;
	width: 1264px;
	height: 30px;
	border-bottom: 1px solid #fff;
	-webkit-animation: intro 0.3s both;
	animation: intro 0.3s both;
	-webkit-animation-delay: 0.15s;
	animation-delay: 0.15s;
	z-index: 20;
}
.masthead__inner-wrap {
	clear: both;
	margin-left: auto;
	margin-right: auto;
	padding: 1em 0;
	max-width: 100%;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-pack: justify;
	-ms-flex-pack: justify;
	justify-content: space-between;
	font-family: $font-family_1;
	background-color: $background-color_1;
	&::after {
		clear: both;
		content: "";
		display: table;
	}
	nav {
		z-index: 10;
	}
}
.site-title {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-ms-flex-item-align: center;
	align-self: center;
	font-weight: bold;
}
.site-subtitle {
	display: block;
	font-size: .625em;
}
.masthead__menu {
	float: left;
	margin-left: 0;
	margin-right: 0;
	width: 100%;
	clear: both;
	color: $color_1;
	.site-nav {
		margin-left: 0;
	}
	ul {
		margin: 0;
		padding: 0;
		clear: both;
		list-style-type: none;
	}
}
.masthead__menu-item {
	display: block;
	list-style-type: none;
	white-space: nowrap;
	padding-right: 2em;
}
.greedy-nav {
	position: relative;
	display: flex;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	min-height: 2em;
	// background: #000;
	background-image: url('../images/background.gif');
    background-size: cover;
	img {
		-webkit-transition: none;
		transition: none;
	}
	.visible-links {
		display: -webkit-box;
		display: -ms-flexbox;
		display: flex;
		-webkit-box-pack: end;
		-ms-flex-pack: end;
		justify-content: flex-end;
		-webkit-box-flex: 1;
		-ms-flex: 1;
		flex: 1;
		overflow: hidden;
		li {
			-webkit-box-flex: 0;
			-ms-flex: none;
			flex: none;
		}
	}
}
a.site-title {
	font-family: $font-family_2;
	font-size: 40px;
	font-weight: lighter;
	margin-left: 1em;
}
.greedy-nav__toggle {
	-ms-flex-item-align: center;
	align-self: center;
	height: 2rem;
	border: 0;
	outline: none;
	background-color: $background-color_2;
	cursor: pointer;
}
.layout--home {
	display: flex;
	flex-direction: column;
	padding: 85px 0 0;
}
.page__footer {
	float: left;
	margin-top: 3em;
	background-color: $background-color_3;
	display: block;
	color: $color_2;
	&::after {
		clear: both;
		content: "";
		display: table;
	}
}
.page__footer-copyright {
	font-family: $font-family_3;
	font-size: .6875em;
	padding: 1em;
}
.border {
	padding-left: 1em;
	border-top: 1px solid #000;
	margin-bottom: 0.5em;
	margin-top: 0.5em;
}
.post-link {
	text-decoration: underline;
	text-decoration: none;
	color: $color_3;
	&:visited {
		text-decoration: none;
		color: $color_3;
	}
}
.posts__list {
	padding-left: 2em;
}
h2 {
	font-weight: 400;
	color: $color_4;
	padding-bottom: 0.5em;
	border-bottom: 1px solid #f2f3f3;
	color: $color_6;
}
.post-date {
	color: $color_5;
	font-size: 18px;
	font-style: italic;
	margin: 0 0 10px;
}
a {
	text-decoration: none;
	color: $color_3;
	position: relative;
	padding-bottom: 5px;
	&:visited {
		text-decoration: none;
		color: $color_3;
	}
	&:before {
		content: "";
		position: absolute;
		left: 0;
		bottom: 2px;
		height: 4px;
		background: currentColor;
		width: 100%;
		transition: all 0.2s ease-in-out;
		transform: scaleX(0) translate3d(0, 0, 0);
	}
	&:hover {
		&:before {
			transform: scaleX(1);
		}
	}
}

.markdown-content {
	a {
		color:blue;
	}
}
.social-icons {
	display: block;
	margin-block-start: 1em;
	margin-block-end: 1em;
	margin-inline-start: 0px;
	margin-inline-end: 0px;
	padding-inline-start: 40px;
	li {
		list-style-type: none;
		font-weight: bold;
		text-transform: uppercase;
		display: inline-block;
		margin-left: 1em;
	}
}
@media (min-width: 37.5em) {
	.masthead__menu {	
		.site-nav {
			float: right;
		}
	}
}

.image-container {
    display: flex;
    justify-content:center; /* Adjust as necessary for spacing */
	align-items: center;
	flex-wrap :nowrap;
	.image-box {
		display:inline-block;
		width: 30%;
		margin-right: 10px;
		border-style: solid;
		border-color: black;
	}
}



.two-image {
	max-width: 100%;
	display:flex;
	justify-content: center;

}

$imgsz: 40%;
$imgmargin: 20px;
  
.imgleft {
	display: inline-flex;
	float: left;
	margin-right: $imgmargin;
	margin-bottom: $imgmargin;
}

.imgright {
	display: inline-flex;
	float: right;
	margin-left: $imgmargin;
	margin-bottom: $imgmargin;
}

.caption {
	text-align: center;
}

